# excel-mcp-server

./: .ceo-directives.md  .ceo-plan.md  .check-config.json  .claude-analysis-req060.md  .claude-code-output.txt  .claude-output-1.txt  .claude-output-2.txt  .claude-output.txt  .claude-sessions.json  .claude-tasks.md  .claude.md  .cron-efficiency.md  .cron-focus.md  .cron-prompt.md  .cron-prompt.md.backup.1775349487  .current-task.md  .editorconfig  .env  .evolution-log.md  .get-error-locations.md  .gitattributes  .gitignore  .health_report.txt  .iterate-start  .iteration-memory.md  .k3-report-final.md  .mcp.json  .progress-K0.json  .scorecard.md  .step-K0.done  .step-K1.done  .step-K2.done  .step-K3.done  .step-REQ-066-done  .step-REQ-067-done  .venv  .version-info.txt  AGENTS.md  API_ISSUES_REPORT.md  API_OPTIMIZATION_SUMMARY.md  (+253 more)
.agentic-tools-mcp/tasks/: tasks.json
.claude/: mcp.json  settings.local.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
.health_check_history/: health_20260329_174341.json  health_20260402_001125.json
.omp/: HARNESS-INDEX.md
.omp/extensions/: criterion-check.ts
.omp/memory/: decisions.md  invariants.md  pitfalls.md  preferences.md  relationships.md  self-state.md
.omp/rules/: axioms.md  quality-gates.md
.version_check_history/: check_20260329_221734.json  check_20260330_012100.json  check_20260330_025814.json
archive/: test_new_apis.py  test_new_features.py
data/: adversarial-score.jsonl  carrier-registry.json  evaluator-registry.json  evolution-log.json  quantification-standard.md  test-api-comprehensive.xlsx  test-proposal.json  trust-anchor.sha256
data/examples/: test-data.xlsx
data/temp/: temp_test.xlsx
docs/: API_OPTIMIZATION_SUMMARY.md  ARCHIVED.md  CONTRIBUTING.md  CONVENTIONAL_COMMITS.md  DECISIONS-ARCHIVED-2026-03-27-R123.md  DECISIONS-ARCHIVED-2026-03-27-TOP10.md  DECISIONS-ARCHIVED-temp.md  DECISIONS-ARCHIVED.md  DECISIONS-NEW.md  DECISIONS-TMP.md  DECISIONS.md  DECISIONS.md.backup  DEVELOPMENT.md  EDGE-CASE-TESTS.md  EXCEL_SECURITY_BEST_PRACTICES.md  FEISHU_SUMMARY.md  INDEX.md  INTERACTIVE_TUTORIAL.md  ITERATION_ROADMAP.md  MCP_TOOLS.md  NAVIGATION.md  NOW.md  NOW.md.backup  README-architecture.md  README-gaming.md  README-tools.md  README.md  REQUIREMENTS-ARCHIVED-TEMP.md  REQUIREMENTS-ARCHIVED.md  REQUIREMENTS.md  ROADMAP.md  RULES.md  RULES.md.backup  SECURITY_FOCUSED_LLM_PROMPT.md  SELF-EVALUATION-198.md  SQL_PRINCIPLES.md  TESTING_REPORT.md  TEST_CLEANUP_REPORT.md  UNSUPPORTED_FEATURES.md  USAGE_GUIDE.md  (+10 more)
docs/_archive-development/: .108-round-summary.md  NOW.md  RULES.md
docs/_archive-examples/: README.md
docs/_archive-quality_patterns/: threshold_adjustments.json
docs/_archive-snapshots/: round-261.md  round-262.md  round-267.md  round-268.md  round-272.md  round-278.md  round-290.md  round-294.md  round-295.md  round-297.md  round-298.md  round-299.md  round-301.md  round-306.md  round-308.md
docs/_archive-testing-reports/: COMPLEX_TEST_RESULTS.md  COMPREHENSIVE_TEST_REPORT.md  ULTIMATE_TEST_REPORT.md  WRITE_OPERATIONS_FINAL_REPORT.md
docs/analysis/: REQ-070-dual-header-logic-diff.md
docs/api/: README-comparison.md  README-performance.md  README-sql.md
docs/archive/: ARCHIVED-MAIN.md  DECISIONS-ARCHIVED-20260328-142135.md  DECISIONS-ARCHIVED.md  Excel比较API优化报告_紧凑数组格式.md  NOW-ARCHIVED-20260328-142144.md  REQUIREMENTS-ARCHIVED-20260328-142157.md  SVN_TrSkill_配置对比报告.md  TrSkillEffect配置表比较分析报告_2025年8月22日.md  TrSkill配置对比报告_简化版API.md  TrSkill配置表变更分析报告.md  TrSkill配置表对比报告_2025年8月22日.md  TrSkill配置表比较分析报告_2025年8月22日.md  TrSkill配置表比较报告_20250822_170002.md  TrSkill配置表详细改动分析报告_优化版API验证_2025年8月22日.md  TrSkill配置表详细更新记录_2025年8月22日.md  TrSkill配置表详细比较分析报告_2025年8月22日.md  test_r15_archive.py  test_r67_archive.py  单元测试报告_2025年8月22日.md  (+1 more)
excel_mcp_server_fastmcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: README-monitoring.md  _legacy-check-version.py  _legacy-cleanup.sh  _legacy-verify.sh  adversarial-score.py  benchmark.py  check-docstring-quality.py  check-version-sync.py  check.py  check_docstring_compliance.py  check_project_structure.py  check_test_coverage.py  cleanup_temp_files.py  cleanup_test_files.py  code_quality_analysis.py  compare-holdout.ts  confidence_audit.py  docs-sync-check.py  edge_case_automation.py  edge_case_discovery.py  edge_tests_t416_t435.py  edge_tests_t416_t435.sh  edge_tests_t416_t435_v3.sh  end-round.sh  excel-cli.py  excel_describe_table_refactor.py  fix-readme-final.py  fix-readme-precise.py  fix-readme-unified.py  fix-readme.py  github-star-booster.py  github-stats.py  health-monitor.py  improve-error-handling.py  invariant-pass.sh  lint_docstring_contract.py  mcp_test.py  monitor-and-maintain.py  monitor-config.json  organize_project_structure.py  (+34 more)
skill/: SKILL.md
src/: __init__.py  security_validator.py  server.py  server_v2.py
temp/: run-all-tests.py
test/: test_insert_mode.py  test_pivot_table.py
test_mcp_verification/: large_test_data.xlsx
tests/: comprehensive_verification.py  conftest.py  mcp_validation_test.py  r31_diagnose_d.py  r6_diagnose.py  r8_diagnose.py  round10_test.py  round26_debug.py  round26_mcp_test.py  round27_mcp_test.py  round28_mcp_test.py  round29_mcp_test.py  round30_mcp_test.py  round30_mcp_test_v2.py  round31_mcp_test.py  round32_mcp_test.py  round33_mcp_test.py  round34_mcp_test.py  round35_mcp_test.py  round36_mcp_test.py  round37_mcp_test.py  round5_diagnose.py  round5_diagnose2.py  round5_diagnose3.py  round5_diagnose4.py  round5_diagnose5.py  round5_diagnose6.py  round5_regression.py  round5_test.py  round5_trace_full.py  round5_verify_fix.py  round6_test.py  round7_test.py  round8_test.py  test_advanced_sql.py  test_advanced_sql_features.py  test_advanced_sql_query.py  test_advanced_stats_libs.py  test_all_features.py  test_api_coverage_supplement.py  (+141 more)
tools/: check-harness-l5.js  git-pre-commit-gate.js  quantification-gate.js  setup-hooks.js  sql-accuracy-benchmark.py
(+301 files in other folders)
