[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-mcp-server-fastmcp"
version = "1.6.53"
description = "Excel MCP Server based on FastMCP and openpyxl"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "tangjian", email = "406158101@qq.com"},
]
keywords = ["mcp", "excel", "openpyxl", "game-development", "configuration", "ai", "fastmcp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openpyxl>=3.1.0,<4.0.0",
    "python-calamine>=0.3.0",
    "mcp>=1.0.0,<2.0.0",
    "xlcalculator>=0.5.0,<1.0.0",
    "sqlglot>=27.29.0,<28.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
excel-mcp-server-fastmcp = "excel_mcp_server_fastmcp:main"

[project.urls]
Homepage = "https://github.com/TangentDomain/excel-mcp-server"
Repository = "https://github.com/TangentDomain/excel-mcp-server"
Issues = "https://github.com/TangentDomain/excel-mcp-server/issues"
PyPI = "https://pypi.org/project/excel-mcp-server-fastmcp/"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=6.2.1,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "pytest-xdist>=3.5.0,<4.0.0",
    "pytest-timeout>=2.3.0,<3.0.0",
    "pytest-benchmark>=4.0.0,<5.0.0",
    "coverage>=7.10.4,<8.0.0",
    "psutil>=5.9.0,<6.0.0",
    "memory-profiler>=0.61.0,<1.0.0",
    "black>=24.0.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "flake8>=7.0.0,<8.0.0",
    "mypy>=1.10.0,<2.0.0",
]
