[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-mcp-server-fastmcp"
version = "1.16.0"
description = "Excel MCP Server based on FastMCP and openpyxl"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "tangjian", email = "406158101@qq.com"},
]
keywords = ["mcp", "excel", "openpyxl", "game-development", "configuration", "ai", "fastmcp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openpyxl>=3.1.0,<4.0.0",
    "python-calamine>=0.3.0",
    "mcp>=1.0.0,<2.0.0",
    "xlcalculator>=0.5.0,<1.0.0",
    "sqlglot>=27.29.0,<29.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
excel-mcp-server-fastmcp = "excel_mcp_server_fastmcp:main"
excel-mcp-verify = "excel_mcp_server_fastmcp.verification.cli:main"

[project.urls]
Homepage = "https://github.com/TangentDomain/excel-mcp-server"
Repository = "https://github.com/TangentDomain/excel-mcp-server"
Issues = "https://github.com/TangentDomain/excel-mcp-server/issues"
PyPI = "https://pypi.org/project/excel-mcp-server-fastmcp/"
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=6.2.1,<7.0.0",
    "pytest-xdist>=3.5.0,<4.0.0",
    "pytest-timeout>=2.3.0,<3.0.0",
    "coverage>=7.10.4,<8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--color=yes",
    "--maxfail=10",
    "--durations=10",
]
markers = [
    "slow: 标记测试为慢速测试",
    "integration: 标记集成测试",
    "security: 标记安全功能测试",
    "unit: 标记单元测试",
    "performance: 标记性能测试",
    "api: 标记API测试",
    "core: 标记核心模块测试",
    "utils: 标记工具模块测试",
    "xdist_group: pytest-xdist 并行分组",
    "timeout: 超时限制",
    "verification: 标记 baseline 驱动闭环验证",
]
norecursedirs = [
    ".git", ".tox", "dist", "build", "*.egg",
    ".venv", "venv", "env", "__pycache__", ".pytest_cache", "htmlcov",
]
filterwarnings = [
    # openpyxl 内部未关闭文件句柄
    "ignore::ResourceWarning",
    "default::DeprecationWarning",
    # sqlglot 上游 bug: LIKE pattern 产生无效转义 (Python 编译器级别)
    "ignore::SyntaxWarning",
]
timeout = 600
timeout_method = "thread"
minversion = "6.0"
[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "test_*",
    "__pycache__/*",
    "*migrations*",
    "*venv*",
    "*env*",
    "setup.py",
]
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    'if __name__ == .__main__.:',
    'class .*\bProtocol\):',
    "@(abc\\.)?abstractmethod",
]
[tool.coverage.html]
directory = "htmlcov"
